deployments/traefik/004-traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      securityContext:
        # Use nogroup (and needs nobody) for the acme.json file
        # for storing TLS
        fsGroup: 65534
      containers:
        - name: traefik
          image: traefik:v2.8.4
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # Run the container as nobody:nogroup
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 9080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            limits:
              memory: '100Mi'
              cpu: '1000m'
          ports:
            # The Traefik container is listening on ports > 1024 so the container
            # can be run as a non-root user and they can bind to these ports.
            - name: web
              containerPort: 8080
            - name: websecure
              containerPort: 8443
            - name: admin
              containerPort: 9080
          volumeMounts:
            - name: traefik-config-folder
              mountPath: /etc/traefik
      volumes:
        - name: traefik-config-folder
          hostPath:
            path: /etc/traefik # Mounted on cluster creation from host in all nodes
